--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,11 @@ dependencies {
     implementation 'org.decimal4j:decimal4j:1.0.3'
     runtimeOnly 'org.postgresql:postgresql:42.3.1'
 
-    annotationProcessor 'org.projectlombok:lombok'
+//    Security
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.6.2'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.2'
 }
