--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,11 @@ plugins {
     id 'org.springframework.boot' version '2.6.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
+mainClassName = 'pl.projekt.simplecantor.SimpleCantorApplication'
 group = 'pl.projekt'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
@@ -11,7 +14,6 @@ sourceCompatibility = '17'
 repositories {
     mavenCentral()
 }
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
@@ -30,4 +32,11 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'pl.projekt.simplecantor.SimpleCantorApplication'
+    }
 }
